--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../lib/jquery_lite.js"></script>
+    <script type="text/javascript" src="../lib/lion_dom.js"></script>
 
     <title></title>
   </head>
